# quickthumb

./: .gitignore  CLAUDE.md  DESIGN.md  GEMINI.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: tdd-agent.md  tdd-expert.md  tdd-implementer.md  tdd-test-writer.md
.claude/commands/: tdd.md
.claude/skills/tdd/: SKILL.md
.gemini/: settings.json
.gemini/skills/tdd-implementer/: SKILL.md
.gemini/skills/tdd-test-writer/: SKILL.md
.github/workflows/: publish.yaml
examples/: README.md  instagram_news_card.py  youtube_thumbnail_01.py  youtube_thumbnail_02.py
quickthumb/: __init__.py  canvas.py  errors.py  font_cache.py  models.py
tests/: __init__.py  conftest.py  test_background_layers.py  test_canvas.py  test_canvas_creation.py  test_font_cache.py  test_image_layers.py  test_outline_layers.py  test_rendering.py  test_shape_layers.py  test_text_effects.py  test_text_layers.py
