[project]
name = "quickthumb"
version = "0.2.0"
description = "A Python library for programmatic thumbnail generation"
authors = [{name = "Seonu Jang"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.4.0,<11.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "typing-extensions>=4.15.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.12,<0.0.13",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.8.0,<1.0.0",
    "inline-snapshot>=0.31.1,<0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickthumb"]

[tool.uv]
add-bounds = "major"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["quickthumb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
preview = true
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=quickthumb --cov-report=term-missing"

[tool.coverage.run]
source = ["quickthumb"]
omit = ["tests/*", "quickthumb/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
